--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+# Ignore "data" files
+public/assets
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
