--- a/config/database.yml
+++ b/config/database.yml
@@ -5,26 +5,30 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: kinship
+  database: kinship-dev
   pool: 5
   timeout: 5000
-  username: kinship
+  username: kinship-dev
   password: kinship
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: kinship-test
   pool: 5
   timeout: 5000
+  username: kinship-test
+  password: kinship
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: kinship
   pool: 5
   timeout: 5000
+  username: kinship
+  password: kinship
 
 cucumber:
   <<: *test
