Added some build options to travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ rvm:
   - 2.0.0
 before_script:
   - psql -c "CREATE USER kinship_test WITH CREATEDB PASSWORD 'kinship';" -U postgres
+script:
+  - bundle exec rake db:migrate
+  - bundle exec rake db:seed
+  - bundle exec rspec
