--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 2.0.0
 before_script:
   - psql -c "CREATE USER kinship_test WITH CREATEDB PASSWORD 'kinship';" -U postgres
-  - psql -c 'CREATE EXTENSION IF NOT EXISTS hstore' -U postgres
+  - psql kinship_test -c 'CREATE EXTENSION IF NOT EXISTS hstore' -U postgres
 script:
   - bundle exec rake db:setup
   - bundle exec rspec
