--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 rvm:
   - 2.0.0
 before_script:
+  - psql -c 'create database kinship_test' -U postgres
   - psql -c "CREATE USER kinship_test WITH CREATEDB PASSWORD 'kinship';" -U postgres
   - psql kinship_test -c 'CREATE EXTENSION IF NOT EXISTS hstore' -U postgres
 script:
