--- a/config/database.yml
+++ b/config/database.yml
@@ -1,34 +1,16 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
-  adapter: postgresql
-  database: kinship_dev
+default: &default
+  adapter: sqlite3
   pool: 5
   timeout: 5000
-  username: kinship_dev
-  password: kinship
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+development:
+  <<: *default
+  database: db/development.sqlite3
+
 test: &test
-  adapter: postgresql
-  database: kinship_test
-  pool: 5
-  timeout: 5000
-  username: kinship_test
-  password: kinship
+  <<: *default
+  database: db/test.sqlite3
 
 production:
-  adapter: postgresql
-  database: kinship
-  pool: 5
-  timeout: 5000
-  username: kinship
-  password: kinship
-
-cucumber:
-  <<: *test
+  <<: *default
+  database: db/production.sqlite3
