--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
   - 2.0.0
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 before_script:
   - psql -c 'create database kinship_test' -U postgres
   - psql -c "CREATE USER kinship_test WITH CREATEDB PASSWORD 'kinship';" -U postgres
