Add binstubs to travis bundler

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+bundler_args: --binstubs
 rvm:
   - 2.0.0
 before_install:
@@ -12,7 +13,7 @@ script:
   - bundle exec rspec
   - bundle exec cucumber
 after_script:
-  - codeclimate-batch --groups 2
+  - ./bin/codeclimate-batch --groups 2
 addons:
   code_climate:
     repo_token: f241ee42b8789671ef3e0a8e85d7f91734e503d1cafe1b76503df91a9aa5e556
